--- a/windows/sysmon/events/event-16.yml
+++ b/windows/sysmon/events/event-16.yml
@@ -5,7 +5,7 @@ log_source: sysmon
 event_code: '16'
 event_version: '4.32'
 event_fields:
-- standard_name: event_date_creation
+- standard_name: event_creation_time
   standard_type: TBD
   name: UtcTime
   type: date
