--- a/windows/sysmon/events/event-21.yml
+++ b/windows/sysmon/events/event-21.yml
@@ -18,7 +18,7 @@ event_fields:
   type: string
   description: wmievent type
   sample_value: WmiBindingEvent
-- standard_name: event_date_creation
+- standard_name: event_creation_time
   standard_type: TBD
   name: UtcTime
   type: date
