--- a/windows/sysmon/events/event-10.yml
+++ b/windows/sysmon/events/event-10.yml
@@ -18,7 +18,7 @@ event_fields:
   type: string
   description: custom tag mapped to event. i.e ATT&CK technique ID
   sample_value: T1114
-- standard_name: event_date_creation
+- standard_name: event_creation_time
   standard_type: TBD
   name: UtcTime
   type: date
@@ -43,10 +43,9 @@ event_fields:
   standard_type: TBD
   name: SourceThreadId
   type: integer
-  description: ID of the specific thread inside of the source process that opened
-    another process
+  description: ID of the specific thread inside of the source process that opened another process
   sample_value: '2804'
-- standard_name: process_path
+- standard_name: process_file_path
   standard_type: TBD
   name: SourceImage
   type: string
@@ -64,7 +63,7 @@ event_fields:
   type: integer
   description: Process ID used by the os to identify the target process
   sample_value: '2288'
-- standard_name: target_process_path
+- standard_name: target_process_file_path
   standard_type: TBD
   name: TargetImage
   type: string
@@ -74,16 +73,13 @@ event_fields:
   standard_type: TBD
   name: GrantedAccess
   type: string
-  description: The access flags (bitmask) associated with the process rights requested
-    for the target process
+  description: The access flags (bitmask) associated with the process rights requested for the target process
   sample_value: '0x1000'
 - standard_name: process_call_trace
   standard_type: TBD
   name: CallTrace
   type: string
-  description: Stack trace of where open process is called. Included is the DLL and
-    the relative virtual address of the functions in the call stack right before the
-    open process call
+  description: Stack trace of where open process is called. Included is the DLL and the relative virtual address of the functions in the call stack right before the open process call
   sample_value: C:\WINDOWS\SYSTEM32\ntdll.dll+a0344
 references:
 - text: Sysmon Source
