--- a/windows/sysmon/events/event-11.yml
+++ b/windows/sysmon/events/event-11.yml
@@ -14,7 +14,7 @@ event_fields:
   type: string
   description: custom tag mapped to event. i.e ATT&CK technique ID
   sample_value: T1114
-- standard_name: event_date_creation
+- standard_name: event_creation_time
   standard_type: TBD
   name: UtcTime
   type: date
@@ -30,10 +30,9 @@ event_fields:
   standard_type: TBD
   name: ProcessId
   type: integer
-  description: Process ID used by the os to identify the process that created the
-    file (child)
+  description: Process ID used by the os to identify the process that created the file (child)
   sample_value: '1044'
-- standard_name: process_path
+- standard_name: process_file_path
   standard_type: TBD
   name: Image
   type: string
@@ -45,7 +44,7 @@ event_fields:
   type: string
   description: Name of the file
   sample_value: C:\Windows\Prefetch\CONHOST.EXE-1F3E9D7E.pf
-- standard_name: file_date_creation
+- standard_name: file_creation_time
   standard_type: TBD
   name: CreationUtcTime
   type: date
