--- a/windows/sysmon/events/event-17.yml
+++ b/windows/sysmon/events/event-17.yml
@@ -18,7 +18,7 @@ event_fields:
   type: string
   description: custom tag mapped to event. i.e ATT&CK technique ID
   sample_value: T1114
-- standard_name: event_date_creation
+- standard_name: event_creation_time
   standard_type: TBD
   name: UtcTime
   type: date
@@ -34,8 +34,7 @@ event_fields:
   standard_type: TBD
   name: ProcessId
   type: integer
-  description: Process ID used by the os to identify the process that created the
-    pipe
+  description: Process ID used by the os to identify the process that created the pipe
   sample_value: '1224'
 - standard_name: pipe_name
   standard_type: TBD
@@ -43,7 +42,7 @@ event_fields:
   type: string
   description: Name of the pipe created
   sample_value: Anonymous Pipe
-- standard_name: process_path
+- standard_name: process_file_path
   standard_type: TBD
   name: Image
   type: string
