--- a/windows/sysmon/events/event-18.yml
+++ b/windows/sysmon/events/event-18.yml
@@ -18,7 +18,7 @@ event_fields:
   type: string
   description: custom tag mapped to event. i.e ATT&CK technique ID
   sample_value: T1114
-- standard_name: event_date_creation
+- standard_name: event_creation_time
   standard_type: TBD
   name: UtcTime
   type: date
@@ -34,8 +34,7 @@ event_fields:
   standard_type: TBD
   name: ProcessId
   type: integer
-  description: Process ID used by the os to identify the process that connected the
-    pipe
+  description: Process ID used by the os to identify the process that connected the pipe
   sample_value: '1896'
 - standard_name: pipe_name
   standard_type: TBD
@@ -43,7 +42,7 @@ event_fields:
   type: string
   description: Name of the pipe connecged
   sample_value: \srvsvc
-- standard_name: process_path
+- standard_name: process_file_path
   standard_type: TBD
   name: Image
   type: string
