--- a/azure/events/aad_managedidentity_signinlogs.yml
+++ b/azure/events/aad_managedidentity_signinlogs.yml
@@ -65,7 +65,7 @@ event_fields:
   type: dynamic
   description: "Details of the sign-in location"
   sample_value: |
-  {
+    {
         "city": "Redmond",
         "state": "Washington",
         "countryOrRegion": "US",
@@ -73,14 +73,14 @@ event_fields:
           "altitude": null,
           "latitude": 47.68050003051758,
           "longitude": -122.12094116210938
-        }
-      }
+          }
+    }
 - standard_name: TBD
   standard_type: TBD
   name: OperationName
   type: string
   description: "For sign-ins, this value is always Sign-in activity"
-  sample_value: ""Sign-in activity"
+  sample_value: "Sign-in activity"
 - standard_name: TBD
   standard_type: TBD
   name: OperationVersion
