--- a/azure/events/aad_noninteractiveuser_signinlogs.yml
+++ b/azure/events/aad_noninteractiveuser_signinlogs.yml
@@ -29,7 +29,7 @@ event_fields:
   type: string
   description: "The result of the authentication attempt and additional details on the authentication method."
   sample_value: | 
-  "[ 
+    [ 
         {
           "authenticationStepDateTime":"2018-11-06T18:48:03.8313489Z",
           "authenticationMethod":"Password",
@@ -38,7 +38,7 @@ event_fields:
           "authenticationStepResultDetail":"methodSucceeded",
           "authenticationStepRequirement":"Primary authentication"
         }
-      ]"
+    ]
 - standard_name: TBD
   standard_type: TBD
   name: AuthenticationMethodsUsed
@@ -81,7 +81,7 @@ event_fields:
   type: string
   description: "Details of the conditional access policies being applied for the sign-in"
   sample_value: |
-  "[
+    [
         {
           "id":"6551c58c-e5da-4036-a6ea-c2c3fad264f1",
           "displayName":"MFA policy",
@@ -99,7 +99,7 @@ event_fields:
           "enforcedSessionControls":[],
           "result":"notEnabled"
         }
-      ]"
+    ]
 - standard_name: TBD
   standard_type: TBD
   name: ConditionalAccessStatus
@@ -124,7 +124,7 @@ event_fields:
   type: dynamic
   description: "Details of the device used for the sign-in"
   sample_value: |
-  {
+    {
         "deviceId":null,
         "displayName":null,
         "operatingSystem":"Windows 10",
@@ -132,7 +132,7 @@ event_fields:
         "isCompliant":null,
         "isManaged":null,
         "trustType":null
-      }
+    }
 - standard_name: TBD
   standard_type: TBD
   name: DurationMs
@@ -187,7 +187,7 @@ event_fields:
   type: dynamic
   description: "Details of the sign-in location"
   sample_value: |
-  {
+    {
         "city": "Redmond",
         "state": "Washington",
         "countryOrRegion": "US",
@@ -195,18 +195,17 @@ event_fields:
           "altitude": null,
           "latitude": 47.68050003051758,
           "longitude": -122.12094116210938
-        }
-      }
-
+          }
+    }
 - standard_name: TBD
   standard_type: TBD
   name: MfaDetail
   type: dynamic
   description: "Details of the Multi-factor authentication"
   sample_value: |
-  {
-    "authMethod":"Mobile app notification",
-    "authDetail":"+X XXXXXXXX03"
+    {
+      "authMethod":"Mobile app notification",
+      "authDetail":"+X XXXXXXXX03"
     }
 - standard_name: TBD
   standard_type: TBD
@@ -219,7 +218,7 @@ event_fields:
   name: OperationName
   type: string
   description: "For sign-ins, this value is always Sign-in activity"
-  sample_value: ""Sign-in activity"
+  sample_value: "Sign-in activity"
 - standard_name: TBD
   standard_type: TBD
   name: OperationVersion
@@ -320,7 +319,7 @@ event_fields:
   standard_type: TBD
   name: SignInEventTypes
   type: string
-  description: "The types that are associated with the sign-in. Examples include "interactive", "refreshToken", "managedIdentity", "continuousAccessEvaluation" and many more"
+  description: 'The types that are associated with the sign-in. Examples include "interactive", "refreshToken", "managedIdentity", "continuousAccessEvaluation" and many more'
   sample_value: null
 - standard_name: TBD
   standard_type: TBD
