--- a/windows/microsoftdefenderforendpoint/events/DeviceFileEvents_v1.yml
+++ b/windows/microsoftdefenderforendpoint/events/DeviceFileEvents_v1.yml
@@ -1,243 +1,275 @@
 name: DeviceFileEvents
 description: File creation, modification, and other file system events
 platform: windows
-log_source: windowsdefenderatp
+log_source: Microsoft Defender for Endpoint
 event_id: DeviceFileEvents
-event_version: '0'
+event_version: '1'
 event_fields:
 - standard_name: event_date_creation
-  standard_type: TBD
   name: Timestamp
   type: date
-  description: Date and time when the event was recorded
+  description: Date and time when the record was generated
   sample_value: ''
-- standard_name: machine_id
-  standard_type: TBD
+- standard_name: device_id
   name: DeviceId
   type: string
-  description: Unique identifier for the machine in the service
+  description: Unique identifier for the device in the service
   sample_value: ''
-- standard_name: computer_name
-  standard_type: TBD
+- standard_name: device_name
   name: DeviceName
   type: string
-  description: Fully qualified domain name (FQDN) of the machine
+  description: Fully qualified domain name (FQDN) of the device
   sample_value: ''
 - standard_name: action_type
-  standard_type: TBD
   name: ActionType
   type: string
   description: Type of activity that triggered the event
   sample_value: ''
 - standard_name: file_name
-  standard_type: TBD
   name: FileName
   type: string
   description: Name of the file that the recorded action was applied to
   sample_value: ''
 - standard_name: file_path
-  standard_type: TBD
   name: FolderPath
   type: string
   description: Folder containing the file that the recorded action was applied to
   sample_value: ''
-- standard_name: hash_sha1
-  standard_type: TBD
+- standard_name: file_hash_sha1
   name: SHA1
   type: string
-  description: SHA-1 of the file that the recorded action was applied to
+  description: SHA-1 hash of the file that the recorded action was applied to
   sample_value: ''
-- standard_name: hash_sha256
-  standard_type: TBD
+- standard_name: file_hash_sha256
   name: SHA256
   type: string
-  description: SHA-256 of the file that the recorded action was applied to. This field is usually not populated-use the SHA1 column when available.
+  description: SHA-256 of the file that the recorded action was applied to
   sample_value: ''
-- standard_name: hash_md5
-  standard_type: TBD
+- standard_name: file_hash_md5
   name: MD5
   type: string
   description: MD5 hash of the file that the recorded action was applied to
   sample_value: ''
 - standard_name: file_origin_url
-  standard_type: TBD
   name: FileOriginUrl
   type: string
   description: URL where the file was downloaded from
   sample_value: ''
 - standard_name: file_origin_reference_url
-  standard_type: TBD
   name: FileOriginReferenceUrl
   type: string
   description: URL of the web page that links to the downloaded file
   sample_value: ''
 - standard_name: file_origin_ip
-  standard_type: TBD
   name: FileOriginIP
   type: string
   description: IP address where the file was downloaded from
   sample_value: ''
+- standard_name: file_previous_directory
+  name: PreviousFolderPath
+  type: string
+  description: Original folder containing the file before the recorded action was applied
+  sample_value: ''
+- standard_name: file_previous_name
+  name: PreviousFileName
+  type: string
+  description: Original name of the file that was renamed as a result of the action
+  sample_value: ''
+- standard_name: file_size
+  name: FileSize
+  type: string
+  description: Size of the file in bytes
+  sample_value: ''
 - standard_name: user_domain
-  standard_type: TBD
   name: InitiatingProcessAccountDomain
   type: string
   description: Domain of the account that ran the process responsible for the event
   sample_value: ''
 - standard_name: user_name
-  standard_type: TBD
   name: InitiatingProcessAccountName
   type: string
   description: User name of the account that ran the process responsible for the event
   sample_value: ''
 - standard_name: user_sid
-  standard_type: TBD
   name: InitiatingProcessAccountSid
   type: string
   description: Security Identifier (SID) of the account that ran the process responsible for the event
   sample_value: ''
-- standard_name: md5_hash
-  standard_type: TBD
+- standard_name: user_upn
+  name: InitiatingProcessAccountUpn
+  type: string
+  description: User principal name (UPN) of the account that ran the process responsible for the event
+  sample_value: ''
+- standard_name: process_user_object_id
+  name: InitiatingProcessAccountObjectId
+  type: string
+  description: Azure AD object ID of the user account that ran the process responsible for the event
+  sample_value: ''
+- standard_name: process_hash_md5
   name: InitiatingProcessMD5
   type: string
   description: MD5 hash of the process (image file) that initiated the event
   sample_value: ''
-- standard_name: sha1_hash
-  standard_type: TBD
+- standard_name: process_hash_sha1
   name: InitiatingProcessSHA1
   type: string
-  description: SHA-1 of the process (image file) that initiated the event
+  description: SHA-1 hash of the process (image file) that initiated the event
   sample_value: ''
-- standard_name: process_path
-  standard_type: TBD
+- standard_name: process_hash_sha256
+  name: InitiatingProcessSHA256
+  type: string
+  description: SHA-256 hash of the process (image file) that initiated the event. This field is usually not populated - use the SHA1 column when available
+  sample_value: ''
+- standard_name: process_file_directory
   name: InitiatingProcessFolderPath
   type: string
   description: Folder containing the process (image file) that initiated the event
   sample_value: ''
-- standard_name: process_name
-  standard_type: TBD
+- standard_name: process_file_name
   name: InitiatingProcessFileName
   type: string
   description: Name of the process that initiated the event
   sample_value: ''
+- standard_name: process_file_size
+  name: InitiatingProcessFileSize
+  type: string
+  description: Size of the process (image file) that initiated the event
+  sample_value: ''
+- standard_name: process_file_company
+  name: InitiatingProcessVersionInfoCompanyName
+  type: string
+  description: Company name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: process_file_product
+  name: InitiatingProcessVersionInfoProductName
+  type: string
+  description: Product name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: process_file_version
+  name: InitiatingProcessVersionInfoProductVersion
+  type: string
+  description: Product version from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  name: InitiatingProcessVersionInfoInternalFileName
+  type: string
+  description: Internal file name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  name: InitiatingProcessVersionInfoOriginalFileName
+  type: string
+  description: Original file name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  name: InitiatingProcessVersionInfoFileDescription
+  type: string
+  description: Description from the version information of the process (image file) responsible for the event
+  sample_value: ''
 - standard_name: process_id
-  standard_type: TBD
   name: InitiatingProcessId
   type: int
   description: Process ID (PID) of the process that initiated the event
   sample_value: ''
 - standard_name: process_command_line
-  standard_type: TBD
   name: InitiatingProcessCommandLine
   type: string
   description: Command line used to run the process that initiated the event
   sample_value: ''
 - standard_name: process_creation_time
-  standard_type: TBD
   name: InitiatingProcessCreationTime
   type: date
   description: Date and time when the process that initiated the event was started
   sample_value: ''
 - standard_name: process_integrity_level
-  standard_type: TBD
   name: InitiatingProcessIntegrityLevel
   type: string
   description: Integrity level of the process that initiated the event. Windows assigns integrity levels to processes based on certain characteristics, such as if they were launched from an internet download. These integrity levels influence permissions to resources.
   sample_value: ''
 - standard_name: process_token_elevation
-  standard_type: TBD
   name: InitiatingProcessTokenElevation
   type: string
   description: Token type indicating the presence or absence of User Access Control (UAC) privilege elevation applied to the process that initiated the event
   sample_value: ''
 - standard_name: process_parent_id
-  standard_type: TBD
   name: InitiatingProcessParentId
   type: int
   description: Process ID (PID) of the parent process that spawned the process responsible for the event
   sample_value: ''
 - standard_name: process_parent_name
-  standard_type: TBD
   name: InitiatingProcessParentFileName
   type: string
   description: Name of the parent process that spawned the process responsible for the event
   sample_value: ''
 - standard_name: process_parent_creation_time
-  standard_type: TBD
   name: InitiatingProcessParentCreationTime
   type: date
   description: Date and time when the parent of the process responsible for the event was started
   sample_value: ''
-- standard_name: dst_port_name
-  standard_type: TBD
+- standard_name: application_protocol
   name: RequestProtocol
   type: string
-  description: 'Network protocol, if applicable, used to initiate the activity: Unknown, Local, SMB, or NFS'
+  description: Network protocol, if applicable, used to initiate the activity - Unknown, Local, SMB, or NFS
   sample_value: SMB
-- standard_name: share_name
-  standard_type: TBD
-  name: ShareName
-  type: string
-  description: Name of shared folder containing the file
-  sample_value: ''
 - standard_name: process_parent_creation_time
-  standard_type: TBD
   name: RequestSourceIP
   type: date
   description: IPv4 or IPv6 address of the remote device that initiated the activity
   sample_value: ''
 - standard_name: src_port
-  standard_type: TBD
   name: RequestSourcePort
   type: integer
   description: Source port on the remote device that initiated the activity
   sample_value: '1234'
 - standard_name: user_name
-  standard_type: TBD
   name: RequestAccountName
   type: string
   description: User name of account used to remotely initiate the activity
   sample_value: ''
 - standard_name: user_domain
-  standard_type: TBD
   name: RequestAccountDomain
   type: string
   description: Domain of the account used to remotely initiate the activity
   sample_value: ''
 - standard_name: user_sid
-  standard_type: TBD
   name: RequestAccountSid
   type: string
-  description: Security Identifier (SID) of the account to remotely initiate the activity
+  description: Security Identifier (SID) of the account used to remotely initiate the activity
+  sample_value: ''
+- standard_name: share_name
+  name: ShareName
+  type: string
+  description: Name of shared folder containing the file
+  sample_value: ''
+- standard_name: sensitivity_label
+  name: SensitivityLabel
+  type: string
+  description: Label applied to an email, file, or other content to classify it for information protection
+  sample_value: ''
+- standard_name: sensitivity_sublabel
+  name: SensitivitySubLabel
+  type: string
+  description: Sublabel applied to an email, file, or other content to classify it for information protection; sensitivity sublabels are grouped under sensitivity labels but are treated independently
+  sample_value: ''
+- standard_name: is_azure_info_protection_applied
+  name: IsAzureInfoProtectionApplied
+  type: boolean
+  description: Indicates whether the file is encrypted by Azure Information Protection
   sample_value: ''
 - standard_name: report_id
-  standard_type: TBD
   name: ReportId
   type: long
-  description: Event identifier based on a repeating counter. To identify unique events, this column must be used in conjunction with the DeviceName and Timestamp columns
+  description: Event identifier based on a repeating counter.To identify unique events, this column must be used in conjunction with the DeviceName and Timestamp columns
   sample_value: ''
 - standard_name: app_guard_container_id
-  standard_type: TBD
   name: AppGuardContainerId
   type: string
   description: Identifier for the virtualized container used by Application Guard to isolate browser activity
   sample_value: ''
-- standard_name: sensitivity_label
-  standard_type: TBD
-  name: SensitivityLabel
-  type: ''
-  description: Label applied to an email, file, or other content to classify it for information protection
+- standard_name: additional_fields
+  name: AdditionalFields
+  type: string
+  description: Additional information about the entity or event
   sample_value: ''
-- standard_name: sensitivity_sublabel
-  standard_type: TBD
-  name: SensitivitySubLabel
-  type: ''
-  description: Sublabel applied to an email, file, or other content to classify it for information protection; sensitivity sublabels are grouped under sensitivity labels but are treated independently
-  sample_value: ''
-- standard_name: is_azure_info_protection_applied
-  standard_type: TBD
-  name: IsAzureInfoProtectionApplied
-  type: ''
-  description: Indicates whether the file is encrypted by Azure Information Protection
-  sample_value: ''
-references: []
+references:
+  - https://docs.microsoft.com/en-us/microsoft-365/security/defender/advanced-hunting-devicefileevents-table?view=o365-worldwide
 tags: []
