--- a/windows/microsoftdefenderforendpoint/events/DeviceImageLoadEvents_v1.yml
+++ b/windows/microsoftdefenderforendpoint/events/DeviceImageLoadEvents_v1.yml
@@ -1,27 +1,27 @@
 name: DeviceImageLoadEvents
 description: DLL loading events
 platform: windows
-log_source: windowsdefenderatp
+log_source: Microsoft Defender for Endpoint
 event_id: DeviceImageLoadEvents
-event_version: '0'
+event_version: '1'
 event_fields:
 - standard_name: event_date_creation
   standard_type: TBD
   name: Timestamp
   type: date
-  description: Date and time when the event was recorded
+  description: Date and time when the record was generated
   sample_value: ''
 - standard_name: device_id
   standard_type: TBD
   name: DeviceId
   type: string
-  description: Unique identifier for the machine in the service
+  description: Unique identifier for the device in the service
   sample_value: ''
 - standard_name: computer_name
   standard_type: TBD
   name: DeviceName
   type: string
-  description: Fully qualified domain name (FQDN) of the machine
+  description: Fully qualified domain name (FQDN) of the device
   sample_value: ''
 - standard_name: action_type
   standard_type: TBD
@@ -45,13 +45,25 @@ event_fields:
   standard_type: TBD
   name: SHA1
   type: string
-  description: SHA-1 of the file that the recorded action was applied to
+  description: SHA-1 hash of the file that the recorded action was applied to
+  sample_value: ''
+- standard_name: hash_sha256
+  standard_type: TBD
+  name: SHA256
+  type: string
+  description: SHA-256 of the file that the recorded action was applied to
   sample_value: ''
 - standard_name: hash_md5
   standard_type: TBD
   name: MD5
   type: string
   description: MD5 hash of the file that the recorded action was applied to
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: FileSize
+  type: long
+  description: Size of the file in bytes
   sample_value: ''
 - standard_name: user_domain
   standard_type: TBD
@@ -71,11 +83,23 @@ event_fields:
   type: string
   description: Security Identifier (SID) of the account that ran the process responsible for the event
   sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessAccountUpn
+  type: string
+  description: User principal name (UPN) of the account that ran the process responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessAccountObjectId
+  type: string
+  description: Azure AD object ID of the user account that ran the process responsible for the event
+  sample_value: ''
 - standard_name: process_integrity_level
   standard_type: TBD
   name: InitiatingProcessIntegrityLevel
   type: string
-  description: Integrity level of the process that initiated the event. Windows assigns integrity levels to processes based on certain characteristics, such as if they were launched from an internet download. These integrity levels influence permissions to resources.
+  description: Integrity level of the process that initiated the event. Windows assigns integrity levels to processes based on certain characteristics, such as if they were launched from an internet download. These integrity levels influence permissions to resources
   sample_value: ''
 - standard_name: process_token_elevation
   standard_type: TBD
@@ -87,7 +111,13 @@ event_fields:
   standard_type: TBD
   name: InitiatingProcessSHA1
   type: string
-  description: SHA-1 of the process (image file) that initiated the event
+  description: SHA-1 hash of the process (image file) that initiated the event
+  sample_value: ''
+- standard_name: process_hash_sha256
+  standard_type: TBD
+  name: InitiatingProcessSHA256
+  type: string
+  description: SHA-256 hash of the process (image file) that initiated the event. This field is usually not populated - use the SHA1 column when available
   sample_value: ''
 - standard_name: process_hash_md5
   standard_type: TBD
@@ -100,6 +130,48 @@ event_fields:
   name: InitiatingProcessFileName
   type: string
   description: Name of the process that initiated the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessFileSize
+  type: long
+  description: Size of the process (image file) that initiated the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoCompanyName
+  type: string
+  description: Company name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoProductName
+  type: string
+  description: Product name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoProductVersion
+  type: string
+  description: Product version from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoInternalFileName
+  type: string
+  description: Internal file name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoOriginalFileName
+  type: string
+  description: Original file name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoFileDescription
+  type: string
+  description: Description from the version information of the process (image file) responsible for the event
   sample_value: ''
 - standard_name: process_id
   standard_type: TBD
@@ -123,7 +195,7 @@ event_fields:
   standard_type: TBD
   name: InitiatingProcessFolderPath
   type: string
-  description: Folder containing the process (image file) that initiated the eventz
+  description: Folder containing the process (image file) that initiated the event
   sample_value: ''
 - standard_name: process_parent_id
   standard_type: TBD
@@ -147,7 +219,7 @@ event_fields:
   standard_type: TBD
   name: ReportId
   type: long
-  description: Event identifier based on a repeating counter. To identify unique events, this column must be used in conjunction with the ComputerName and EventTime columns.
+  description: Event identifier based on a repeating counter.To identify unique events, this column must be used in conjunction with the DeviceName and Timestamp columns
   sample_value: ''
 - standard_name: app_guard_container_id
   standard_type: TBD
@@ -155,5 +227,6 @@ event_fields:
   type: string
   description: Identifier for the virtualized container used by Application Guard to isolate browser activity
   sample_value: ''
-references: []
+references:
+- https://docs.microsoft.com/en-us/microsoft-365/security/defender/advanced-hunting-deviceimageloadevents-table?view=o365-worldwide
 tags: []
