--- a/windows/microsoftdefenderforendpoint/events/DeviceLogonEvents_v1.yml
+++ b/windows/microsoftdefenderforendpoint/events/DeviceLogonEvents_v1.yml
@@ -1,33 +1,39 @@
 name: DeviceLogonEvents
-description: Login and other authentication events
+description: Sign-ins and other authentication events
 platform: windows
-log_source: windowsdefenderatp
+log_source: Microsoft Defender for Endpoint
 event_id: DeviceLogonEvents
-event_version: '0'
+event_version: '1'
 event_fields:
 - standard_name: event_date_creation
   standard_type: TBD
   name: Timestamp
   type: date
-  description: Date and time when the event was recorded
+  description: Date and time when the record was generated
   sample_value: ''
 - standard_name: device_id
   standard_type: TBD
   name: DeviceId
   type: string
-  description: Unique identifier for the machine in the service
+  description: Unique identifier for the device in the service
   sample_value: ''
 - standard_name: computer_name
   standard_type: TBD
   name: DeviceName
   type: string
-  description: Fully qualified domain name (FQDN) of the machine
+  description: Fully qualified domain name (FQDN) of the device
   sample_value: ''
 - standard_name: action_type
   standard_type: TBD
   name: ActionType
   type: string
   description: Type of activity that triggered the event
+  sample_value: ''
+- standard_name: logon_type
+  standard_type: TBD
+  name: LogonType
+  type: string
+  description: Type of logon session, specifically interactive, remote interactive (RDP), network, batch, and service
   sample_value: ''
 - standard_name: user_domain
   standard_type: TBD
@@ -47,23 +53,35 @@ event_fields:
   type: string
   description: Security Identifier (SID) of the account
   sample_value: ''
-- standard_name: logon_type
+- standard_name: TBD
   standard_type: TBD
-  name: LogonType
+  name: Protocol
   type: string
-  description: Type of logon session
+  description: Protocol used during the communication
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: FailureReason
+  type: string
+  description: Information explaining why the recorded action failed
+  sample_value: ''
+- standard_name: user_local_admin
+  standard_type: TBD
+  name: IsLocalAdmin
+  type: boolean
+  description: Boolean indicator of whether the user is a local administrator on the machine
   sample_value: ''
 - standard_name: logon_id
   standard_type: TBD
   name: LogonId
   type: string
-  description: Identifier for a logon session. This identifier is unique on the same machine only between restarts.
+  description: Identifier for a logon session. This identifier is unique on the same machine only between restarts
   sample_value: ''
 - standard_name: dst_host_name
   standard_type: TBD
   name: RemoteDeviceName
   type: string
-  description: Name of the machine that performed a remote operation on the affected machine. Depending on the event being reported, this name could be a fully-qualified domain name (FQDN), a NetBIOS name, or a host name without domain information.
+  description: Name of the device that performed a remote operation on the affected machine. Depending on the event being reported, this name could be a fully-qualified domain name (FQDN), a NetBIOS name, or a host name without domain information
   sample_value: ''
 - standard_name: dst_ip_addr
   standard_type: TBD
@@ -83,12 +101,6 @@ event_fields:
   type: int
   description: TCP port on the remote device that was being connected to
   sample_value: ''
-- standard_name: additional_fields
-  standard_type: TBD
-  name: AdditionalFields
-  type: string
-  description: Additional information about the event in JSON array format
-  sample_value: ''
 - standard_name: process_user_domain
   standard_type: TBD
   name: InitiatingProcessAccountDomain
@@ -107,11 +119,23 @@ event_fields:
   type: string
   description: Security Identifier (SID) of the account that ran the process responsible for the event
   sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessAccountUpn
+  type: string
+  description: User principal name (UPN) of the account that ran the process responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessAccountObjectId
+  type: string
+  description: Azure AD object ID of the user account that ran the process responsible for the event
+  sample_value: ''
 - standard_name: process_integrity_level
   standard_type: TBD
   name: InitiatingProcessIntegrityLevel
   type: string
-  description: Integrity level of the process that initiated the event. Windows assigns integrity levels to processes based on certain characteristics, such as if they were launched from an internet download. These integrity levels influence permissions to resources.
+  description: Integrity level of the process that initiated the event. Windows assigns integrity levels to processes based on certain characteristics, such as if they were launched from an internet download. These integrity levels influence permissions to resources
   sample_value: ''
 - standard_name: process_token_elevation
   standard_type: TBD
@@ -123,7 +147,13 @@ event_fields:
   standard_type: TBD
   name: InitiatingProcessSHA1
   type: string
-  description: SHA-1 of the process (image file) that initiated the event
+  description: SHA-1 hash of the process (image file) that initiated the event
+  sample_value: ''
+- standard_name: process_hash_sha256
+  standard_type: TBD
+  name: InitiatingProcessSHA256
+  type: string
+  description: SHA-256 hash of the process (image file) that initiated the event. This field is usually not populated - use the SHA1 column when available
   sample_value: ''
 - standard_name: process_hash_md5
   standard_type: TBD
@@ -136,6 +166,48 @@ event_fields:
   name: InitiatingProcessFileName
   type: string
   description: Name of the process that initiated the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessFileSize
+  type: long
+  description: Size of the process (image file) that initiated the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoCompanyName
+  type: string
+  description: Company name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoProductName
+  type: string
+  description: Product name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoProductVersion
+  type: string
+  description: Product version from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoInternalFileName
+  type: string
+  description: Internal file name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoOriginalFileName
+  type: string
+  description: Original file name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoFileDescription
+  type: string
+  description: Description from the version information of the process (image file) responsible for the event
   sample_value: ''
 - standard_name: process_id
   standard_type: TBD
@@ -183,7 +255,7 @@ event_fields:
   standard_type: TBD
   name: ReportId
   type: long
-  description: Event identifier based on a repeating counter. To identify unique events, this column must be used in conjunction with the ComputerName and EventTime columns.
+  description: Event identifier based on a repeating counter.To identify unique events, this column must be used in conjunction with the DeviceName and Timestamp columns
   sample_value: ''
 - standard_name: app_guard_container_id
   standard_type: TBD
@@ -191,11 +263,12 @@ event_fields:
   type: string
   description: Identifier for the virtualized container used by Application Guard to isolate browser activity
   sample_value: ''
-- standard_name: user_local_admin
+- standard_name: additional_fields
   standard_type: TBD
-  name: IsLocalAdmin
-  type: boolean
-  description: Boolean indicator of whether the user is a local administrator on the device
+  name: AdditionalFields
+  type: string
+  description: Additional information about the entity or event
   sample_value: ''
-references: []
+references:
+- https://docs.microsoft.com/en-us/microsoft-365/security/defender/advanced-hunting-devicelogonevents-table?view=o365-worldwide
 tags: []
