--- a/windows/microsoftdefenderforendpoint/events/DeviceRegistryEvents_v1.yml
+++ b/windows/microsoftdefenderforendpoint/events/DeviceRegistryEvents_v1.yml
@@ -1,27 +1,26 @@
 name: DeviceRegistryEvents
 description: Creation and modification of registry entries
 platform: windows
-log_source: windowsdefenderatp
+log_source: Microsoft Defender for Endpoint
 event_id: DeviceRegistryEvents
-event_version: '0'
+event_version: '1'
 event_fields:
 - standard_name: event_date_creation
   standard_type: TBD
   name: Timestamp
   type: date
-  description: Date and time when the event was recorded
+  description: Date and time when the record was generated
   sample_value: ''
 - standard_name: device_id
-  standard_type: TBD
   name: DeviceId
   type: string
-  description: Unique identifier for the machine in the service
+  description: Unique identifier for the device in the service
   sample_value: ''
-- standard_name: computer_name
+- standard_name: device_name
   standard_type: TBD
   name: DeviceName
   type: string
-  description: Fully qualified domain name (FQDN) of the machine
+  description: Fully qualified domain name (FQDN) of the device
   sample_value: ''
 - standard_name: action_type
   standard_type: TBD
@@ -53,6 +52,12 @@ event_fields:
   type: string
   description: Data of the registry value that the recorded action was applied to
   sample_value: ''
+- standard_name: previous_registry_key
+  standard_type: TBD
+  name: PreviousRegistryKey
+  type: string
+  description: Original registry key before it was modified
+  sample_value: ''
 - standard_name: previous_registry_value_name
   standard_type: TBD
   name: PreviousRegistryValueName
@@ -83,11 +88,29 @@ event_fields:
   type: string
   description: Security Identifier (SID) of the account that ran the process responsible for the event
   sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessAccountUpn
+  type: string
+  description: User principal name (UPN) of the account that ran the process responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessAccountObjectId
+  type: string
+  description: Azure AD object ID of the user account that ran the process responsible for the event
+  sample_value: ''
 - standard_name: hash_sha1
   standard_type: TBD
   name: InitiatingProcessSHA1
   type: string
-  description: SHA-1 of the process (image file) that initiated the event
+  description: SHA-1 hash of the process (image file) that initiated the event
+  sample_value: ''
+- standard_name: hash_sha256
+  standard_type: TBD
+  name: InitiatingProcessSHA256
+  type: string
+  description: SHA-256 hash of the process (image file) that initiated the event. This field is usually not populated - use the SHA1 column when available.
   sample_value: ''
 - standard_name: hash_md5
   standard_type: TBD
@@ -100,6 +123,48 @@ event_fields:
   name: InitiatingProcessFileName
   type: string
   description: Name of the process that initiated the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessFileSize
+  type: long
+  description: Size of the process (image file) that initiated the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoCompanyName
+  type: string
+  description: Company name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoProductName
+  type: string
+  description: Product name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoProductVersion
+  type: string
+  description: Product version from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoInternalFileName
+  type: string
+  description: Internal file name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoOriginalFileName
+  type: string
+  description: Original file name from the version information of the process (image file) responsible for the event
+  sample_value: ''
+- standard_name: TBD
+  standard_type: TBD
+  name: InitiatingProcessVersionInfoFileDescription
+  type: string
+  description: Description from the version information of the process (image file) responsible for the event
   sample_value: ''
 - standard_name: process_id
   standard_type: TBD
@@ -159,7 +224,7 @@ event_fields:
   standard_type: TBD
   name: ReportId
   type: long
-  description: Event identifier based on a repeating counter. To identify unique events, this column must be used in conjunction with the ComputerName and EventTime columns.
+  description: Event identifier based on a repeating counter.To identify unique events, this column must be used in conjunction with the DeviceName and Timestamp columns
   sample_value: ''
 - standard_name: app_guard_container_id
   standard_type: TBD
@@ -167,5 +232,6 @@ event_fields:
   type: string
   description: Identifier for the virtualized container used by Application Guard to isolate browser activity
   sample_value: ''
-references: []
+references:
+- https://docs.microsoft.com/en-us/microsoft-365/security/defender/advanced-hunting-deviceregistryevents-table?view=o365-worldwide
 tags: []
